[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-predictive-system"
version = "1.0.0"
description = "MLB Predictive System — Análisis Predictivo y Gestión de Riesgo"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Rubén Eduardo Casares Rosales" },
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "catboost>=1.2",
    "statsmodels>=0.14",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.28",
    "alembic>=1.12",
    "requests>=2.31",
    "httpx>=0.25",
    "websockets>=12.0",
    "python-socketio>=5.10",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "orjson>=3.9",
    "joblib>=1.3",
    "cloudpickle>=3.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5.0",
    "slowapi>=0.1.9",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "aiosqlite>=0.20",
]
dev = [
    "ruff>=0.5",
    "coverage>=7.5",
]

[project.scripts]
mlb     = "api.cli:main"
mlb-api = "api.app:run_api"

[tool.setuptools.packages.find]
include = ["api*", "etl*", "prediction*", "risk*", "features*"]
